--- a/seasons/package.json
+++ b/seasons/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "components",
+  "name": "seasons",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "faker": "^4.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
